<resources>
    <string name="app_name">Spark Networks</string>
    <string name="submit">Submit</string>
    <string name="option_4">Option 4</string>
    <string name="option_3">Option 3</string>
    <string name="option_2">Option 2</string>
    <string name="option_1">Option 1</string>
    <string name="text_1">Text 1</string>
    <string name="toast_msg">Your answer has been saved successfully!</string>
    <string name="header_text"><u>Header Text</u></string>
    <string name="bullet">\•  \</string>
    <string name="spark_networks">Spark Networks</string>
</resources>
