<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/main_channel_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/size_20"
        android:paddingEnd="@dimen/size_20">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_24"
            android:layout_marginBottom="@dimen/size_20"
            android:gravity="center_vertical"
            android:text="@string/text_1"
            android:textColor="@color/text_color"
            android:textSize="@dimen/size_20_sp" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/question"
            android:paddingTop="@dimen/size_20">

            <RadioButton
                android:id="@+id/option_1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_38"
                android:background="@drawable/rounded_corner"
                android:text="@string/option_1"
                android:textColor="@color/text_color" />

            <RadioButton
                android:id="@+id/option_2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_38"
                android:layout_marginTop="@dimen/size_38"
                android:background="@drawable/rounded_corner"
                android:text="@string/option_2"
                android:textColor="@color/text_color" />

            <RadioButton
                android:id="@+id/option_3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_38"
                android:layout_marginTop="@dimen/size_38"
                android:background="@drawable/rounded_corner"
                android:text="@string/option_3"
                android:textColor="@color/text_color" />

            <RadioButton
                android:id="@+id/option_4"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_38"
                android:layout_marginTop="@dimen/size_38"
                android:background="@drawable/rounded_corner"
                android:text="@string/option_4"
                android:textColor="@color/text_color" />

        </RadioGroup>
    </RelativeLayout>
    <View
        android:id="@+id/divider"
        android:layout_below="@+id/main_channel_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1"
        android:layout_marginTop="@dimen/size_44"
        android:alpha=".5"
        android:background="@color/white">
    </View>

</RelativeLayout>